--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <meta name="theme-color" content="#000000"/>
-    <meta name="description" content="1337 Labs presents L1T: an exquisite collection of blockchain superheroes where premium art meets compelling lore. Learn about L1T and its exciting PFP collectibles on Solana."/>
+    <meta name="description" content="L1T Labs presents L1T: an exquisite collection of blockchain superheroes where premium art meets compelling lore. Learn about L1T and its exciting PFP collection on Solana."/>
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://l1t.com/">
     <meta property="og:title" content="L1T: Premium artwork collection of blockchain superheroes on Solana.">
-    <meta property="og:description" content="1337 Labs presents L1T: an exquisite collection of blockchain superheroes where premium art meets compelling lore. Learn about L1T and its exciting PFP collectibles on Solana.">
-    <meta property="og:image" content="https://i.imgur.com/uq9veqY.png">
+    <meta property="og:description" content="L1T Labs presents L1T: an exquisite collection of blockchain superheroes where premium art meets compelling lore. Learn about L1T and its exciting PFP collection on Solana.">
+    <meta property="og:image" content="https://i.imgur.com/OyaPcev.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://l1t.com/">
     <meta property="twitter:title" content="L1T: Premium artwork collection of blockchain superheroes on Solana.">
-    <meta property="twitter:description" content="1337 Labs presents L1T: an exquisite collection of blockchain superheroes where premium art meets compelling lore. Learn about L1T and its exciting PFP collectibles on Solana.">
-    <meta property="twitter:image" content="https://i.imgur.com/uq9veqY.png">
+    <meta property="twitter:description" content="L1T Labs presents L1T: an exquisite collection of blockchain superheroes where premium art meets compelling lore. Learn about L1T and its exciting PFP collection on Solana.">
+    <meta property="twitter:image" content="https://i.imgur.com/OyaPcev.png">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
