--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,13 @@
     <meta property="og:url" content="https://l1t.com/">
     <meta property="og:title" content="L1T: Premium artwork collection of blockchain superheroes on Solana.">
     <meta property="og:description" content="L1T Labs presents L1T: an exquisite collection of blockchain superheroes where premium art meets compelling lore. Learn about L1T and its exciting PFP collection on Solana.">
-    <meta property="og:image" content="%PUBLIC_URL%/metabanner.jpg">
+    <meta property="og:image" content="https://l1t.com/meta-banner.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://l1t.com/">
     <meta property="twitter:title" content="L1T: Premium artwork collection of blockchain superheroes on Solana.">
     <meta property="twitter:description" content="L1T Labs presents L1T: an exquisite collection of blockchain superheroes where premium art meets compelling lore. Learn about L1T and its exciting PFP collection on Solana.">
-    <meta property="twitter:image" content="%PUBLIC_URL%/metabanner.jpg">
+    <meta property="twitter:image" content="https://l1t.com/meta-banner.jpg">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
